# Reactive-QtWidgets

./: pyproject.toml  pyrightconfig.json  ruff.toml
src/reactive_qtwidgets/: __init__.py  _command.py  _derived_property.py  _observable_property.py  _signal_transformer.py  _types.py
tests/manual/: test_command.py  test_properties.py
tests/unit/: conftest.py  test_command.py  test_derived_property.py  test_observable_property.py  test_signal_transformer.py
