[project]
name = "reactive-qtwidgets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bence Racskó", email = "bracsko94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.409",
    "ruff>=0.15.14",
]
test = [
    "pytest>=9.0.3",
]

[tool.pytest.init_options]
addopts = "--ignore=tests/manual"